--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Banner -->
     <section class="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1500" class="effect-text" data-words="Runa Mont,Web Designer">I'm
+            <h1 data-aos="fade-up" data-aos-duration="1500" class="effect-text" data-words="Runa Mont,Sound designer,DJ,Music Producer">I'm
                 <span class="typed-text"></span>
                 <span class="cursor-text">&nbsp;</span>
             </h1>
@@ -97,7 +97,7 @@
                 <div class="pro-item" data-aos="flip-up" data-aos-duration="1000">
                     <img src="./imgs/pro-ic1.svg" width="30">
                     <h4>Music Lessons</h4>
-                    <p>Studied electronic/ sound design in <br> Denmark and music production Viet Nam</p>
+                    <p>Studied electronic/ sound design in <br> Denmark and music production in Viet Nam</p>
                 </div>
                 <div class="pro-item" data-aos="flip-up" data-aos-duration="1000">
                     <img src="./imgs/pro-ic1.svg" width="30">
@@ -184,7 +184,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>©2023 by Runa Monte. Proudly created with Wix.com</p>
+        <p>©2023 by Runa Monte</p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
