Update Amimation Text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Banner -->
     <section class="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1500" class="effect-text" data-words="Runa Mont,Sound designer,DJ,Music Producer">I'm
+            <h1 data-aos="fade-up" data-aos-duration="1500" class="effect-text" data-words="Runa Mont,I'm Sound designer,I'm DJ,Also a Music Producer">
                 <span class="typed-text"></span>
                 <span class="cursor-text">&nbsp;</span>
             </h1>
