--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Banner -->
     <section class="banner">
         <div class="banner-content">
-            <h1 data-aos="fade-up" data-aos-duration="1500" class="effect-text" data-words="Runa Mont,I'm Sound designer,I'm DJ,Also a Music Producer">
+            <h1 data-aos="fade-up" data-aos-duration="1500" class="effect-text" data-words="Runa Mont,A sound designer,A music producer,Also DJ">
                 <span class="typed-text"></span>
                 <span class="cursor-text">&nbsp;</span>
             </h1>
@@ -123,7 +123,7 @@
                     <h2>Live Performances and DJ</h2>
                     <div class="time-line">
                         <h6>2019</h6>
-                        <p>Soma (MCR): host Tuổi đen (Gothic party) Sâm (MCR): Back to shool : KIMTrang x Zach Sch (Impro set)</p>
+                        <p>Soma (MCR): host Tuổi đen (Gothic party) <br> Sâm (MCR):  Back to shool : KIMTrang x Zach Sch (Impro set)</p>
                     </div>
                     <div class="time-line">
                         <h6>2020</h6>
